# dcroxide

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PARITY.md  QUIRKS.md  README.md  dcroxide-project-brief.md  deny.toml
crates/dcroxide-addrmgr/: Cargo.toml
crates/dcroxide-addrmgr/src/: lib.rs  manager.rs  netaddress.rs  network.rs  seed.rs  tordns.rs
crates/dcroxide-addrmgr/tests/: addrmgr_v2_vectors.rs  addrmgr_vectors.rs  seed_tor_vectors.rs
crates/dcroxide-base58/: Cargo.toml
crates/dcroxide-base58/src/: lib.rs
crates/dcroxide-base58/tests/: oracle_differential.rs  vectors.rs
crates/dcroxide-bench/: Cargo.toml
crates/dcroxide-bench/src/: main.rs
crates/dcroxide-blockchain/: Cargo.toml
crates/dcroxide-blockchain/src/: agendas.rs  blockindex.rs  chaindb.rs  chainio.rs  chainview_nodes.rs  checkedmath.rs  compress.rs  difficulty.rs  error.rs  lib.rs  notifications.rs  process.rs  ruleerror.rs  sequencelock.rs  stakever.rs  thresholdstate.rs  treasurydb.rs  utxoentry.rs  utxoio.rs  utxoview.rs  validate.rs
crates/dcroxide-blockchain/tests/: agenda_vectors.rs  blockcontext_vectors.rs  blockindex_tests.rs  blocksanity_vectors.rs  cfilterserve_vectors.rs  chain_notifications.rs  chainio_vectors.rs  connectblock_vectors.rs  contextual2_vectors.rs  contextual_vectors.rs  ctac_vectors.rs  dcrd22_consensus.rs  difficulty_vectors.rs  fullblock_vectors.rs  invalidate_vectors.rs  liveticket_vectors.rs  lottery_vectors.rs  persistence_vectors.rs  positional_vectors.rs  processblock_vectors.rs  processheaders_vectors.rs  prune_memory.rs  query_vectors.rs  reorg_vectors.rs  seqlock_vectors.rs  sigops_vectors.rs  spend_journal_flag.rs  stakeinputs_vectors.rs  stakenode_vectors.rs  stakever_vectors.rs  template_vectors.rs  threshold_vectors.rs  tpv_vectors.rs  treasury_vectors.rs  txinputs_vectors.rs  utxo_vectors.rs  utxostats.rs  utxoview_vectors.rs  validate_vectors.rs
crates/dcroxide-certgen/: Cargo.toml
crates/dcroxide-certgen/src/: certgen.rs  der.rs  gentool.rs  lib.rs  pem.rs  x509.rs
crates/dcroxide-certgen/tests/: certgen_vectors.rs  gentool_vectors.rs
crates/dcroxide-chaincfg/: Cargo.toml
crates/dcroxide-chaincfg/src/: block_one_data.rs  lib.rs  mainnet.rs  regnet.rs  simnet.rs  testnet.rs  votes.rs
crates/dcroxide-chaincfg/tests/: oracle_differential.rs  params_vectors.rs
crates/dcroxide-chainhash/: Cargo.toml
crates/dcroxide-chainhash/src/: lib.rs
crates/dcroxide-chainhash/tests/: oracle_differential.rs
crates/dcroxide-connmgr/: Cargo.toml
crates/dcroxide-connmgr/src/: banscore.rs  connmanager.rs  conntype.rs  csprng.rs  goexp.rs  groups.rs  lib.rs  manager.rs  ratelimiter.rs  seed.rs  tor.rs
crates/dcroxide-connmgr/tests/: connmanager_scenarios.rs  connmgr_v2_vectors.rs  connmgr_vectors.rs
crates/dcroxide-containers/: Cargo.toml
crates/dcroxide-containers/src/: apbf.rs  lib.rs  lru.rs
crates/dcroxide-containers/tests/: apbf_vectors.rs  lru_vectors.rs
crates/dcroxide-crypto/: Cargo.toml
crates/dcroxide-crypto/src/: blake256.rs  lib.rs  ripemd160.rs
crates/dcroxide-crypto/tests/: oracle_differential.rs
crates/dcroxide-database/: Cargo.toml
crates/dcroxide-database/src/: blockfile.rs  bootstrap.rs  dbcache.rs  error.rs  lib.rs  transaction.rs
crates/dcroxide-database/tests/: blockstore.rs  bootstrap.rs  crash.rs  interface.rs
crates/dcroxide-dcrec/: Cargo.toml
crates/dcroxide-dcrec/src/: edwards.rs  lib.rs  secp256k1.rs
crates/dcroxide-dcrec/tests/: edwards_differential.rs  oracle_differential.rs  schnorr_differential.rs
crates/dcroxide-dcrjson/: Cargo.toml
crates/dcroxide-dcrjson/src/: cmdparse.rs  gojson.rs  gotype.rs  hashes.rs  help.rs  jsonrpc.rs  lib.rs  registry.rs  tabwriter.rs  usage.rs
crates/dcroxide-dcrjson/tests/: dcrjson_vectors.rs  gojson_base64.rs  gojson_depth.rs
crates/dcroxide-fees/: Cargo.toml
crates/dcroxide-fees/src/: estimator.rs  lib.rs
crates/dcroxide-fees/tests/: fees_vectors.rs
crates/dcroxide-gcs/: Cargo.toml
crates/dcroxide-gcs/src/: bits.rs  blockcf2.rs  lib.rs
crates/dcroxide-gcs/tests/: gcs_hostile.rs  oracle_differential.rs
crates/dcroxide-indexers/: Cargo.toml
crates/dcroxide-indexers/src/: common.rs  error.rs  existsaddrindex.rs  legacydrops.rs  lib.rs  subscriber.rs  txindex.rs
crates/dcroxide-indexers/tests/: indexers_vectors.rs
crates/dcroxide-mempool/: Cargo.toml
crates/dcroxide-mempool/src/: error.rs  lib.rs  policy.rs  pool.rs
crates/dcroxide-mempool/tests/: policy_vectors.rs  txpool_vectors.rs  txstake_vectors.rs
crates/dcroxide-mining/: Cargo.toml
crates/dcroxide-mining/src/: bg_generator.rs  cpuminer.rs  generator.rs  graph.rs  lib.rs  policy.rs  pq.rs  template.rs  types.rs  view.rs
crates/dcroxide-mining/tests/: bgtmpl_vectors.rs  miningview_vectors.rs  newtemplate_vectors.rs  template_helper_vectors.rs
crates/dcroxide-mixing/: Cargo.toml
crates/dcroxide-mixing/src/: dcnet.rs  field.rs  lib.rs  mixpool.rs  prng.rs  sid.rs  signatures.rs  utxoproof.rs
crates/dcroxide-mixing/tests/: mixing_vectors.rs  mixpool_vectors.rs
crates/dcroxide-netsync/: Cargo.toml
crates/dcroxide-netsync/src/: lib.rs  manager.rs
crates/dcroxide-netsync/tests/: netsync_vectors.rs
crates/dcroxide-node/: Cargo.toml
crates/dcroxide-node/examples/: dumphelp.rs
crates/dcroxide-node/src/: addblock.rs  bgtemplate.rs  chainntfns.rs  config.rs  cpuminer.rs  dispatch.rs  fees.rs  flags.rs  gostd.rs  indexes.rs  ipc.rs  lib.rs  logging.rs  logo.rs  logsubsys.rs  mining.rs  mixnode.rs  outbound.rs  params.rs  peerconn.rs  (+15 more)
crates/dcroxide-peer/: Cargo.toml
crates/dcroxide-ratelimit/: Cargo.toml
crates/dcroxide-rpc/: Cargo.toml
crates/dcroxide-rpctypes/: Cargo.toml
crates/dcroxide-stake/: Cargo.toml
crates/dcroxide-standalone/: Cargo.toml
crates/dcroxide-testutil/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blake256_incremental.rs  chainhash_from_str.rs  dcrec_ed25519.rs  dcrec_parse_der.rs  dcrec_pubkey_parse.rs  dcrec_schnorr.rs  txscript_engine.rs  uint256_ops.rs  wire_blockheader_decode.rs  wire_frame_decode.rs  wire_msgtx_decode.rs
(+269 files in other folders)
