[workspace]
resolver = "3"
members = [
    "crates/dcroxide-base58",
    "crates/dcroxide-chaincfg",
    "crates/dcroxide-chainhash",
    "crates/dcroxide-crypto",
    "crates/dcroxide-dcrec",
    "crates/dcroxide-stake",
    "crates/dcroxide-standalone",
    "crates/dcroxide-testutil",
    "crates/dcroxide-txscript",
    "crates/dcroxide-uint256",
    "crates/dcroxide-wire",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
authors = ["The dcroxide developers"]
edition = "2024"
rust-version = "1.85"
license = "ISC"
repository = "https://github.com/jzbz/dcroxide"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
arithmetic_side_effects = "warn"
