[package]
name = "dcroxide-addrmgr"
description = "Concurrency safe address manager for caching potential peers, mirroring dcrd's addrmgr package incl. its HTTPS seeding and Tor DNS resolution"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sha3 = { version = "0.10", default-features = false }
chacha20 = { version = "0.9", default-features = false }
dcroxide-crypto = { path = "../dcroxide-crypto" }
dcroxide-dcrjson = { path = "../dcroxide-dcrjson" }
dcroxide-wire = { path = "../dcroxide-wire" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }
tempfile = "3"

[lints]
workspace = true
