[package]
name = "dcroxide-blockchain"
description = "Decred chain engine components mirroring dcrd's internal/blockchain; currently the UTXO serialization layer (VLQ, compressed amounts/scripts, entry and set-state formats)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dcroxide-chaincfg = { path = "../dcroxide-chaincfg" }
dcroxide-gcs = { path = "../dcroxide-gcs" }
dcroxide-chainhash = { path = "../dcroxide-chainhash" }
dcroxide-dcrec = { path = "../dcroxide-dcrec" }
dcroxide-stake = { path = "../dcroxide-stake" }
dcroxide-standalone = { path = "../dcroxide-standalone" }
dcroxide-txscript = { path = "../dcroxide-txscript" }
dcroxide-uint256 = { path = "../dcroxide-uint256" }
dcroxide-wire = { path = "../dcroxide-wire" }
num-bigint = { version = "0.4", default-features = false }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
