[package]
name = "dcroxide-chainhash"
description = "Decred chain hash type mirroring dcrd chaincfg/chainhash (BLAKE-256, byte-reversed display)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dcroxide-crypto = { path = "../dcroxide-crypto" }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
