[package]
name = "dcroxide-connmgr"
description = "Connection management mirroring dcrd's connmgr package: dynamic ban scores and the connection manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dcroxide-dcrjson = { path = "../dcroxide-dcrjson" }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
