[package]
name = "dcroxide-crypto"
description = "Decred cryptographic primitives: BLAKE-256 (vendored, KAT-pinned against dcrd)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
