[package]
name = "dcroxide-crypto"
description = "Decred cryptographic primitives: BLAKE-256 (vendored, KAT-pinned against dcrd)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ripemd = { version = "0.1.3", default-features = false }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
