[package]
name = "dcroxide-dcrec"
description = "Decred signature types mirroring dcrd's dcrec packages: ECDSA-secp256k1 with dcrd's exact acceptance rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The audited libsecp256k1 C library; dcrd's exact parsing/acceptance rules
# are enforced by our own layer in front of it (ADR-0006).
libsecp256k1 = { package = "secp256k1", version = "0.29", features = ["global-context"] }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
