[package]
name = "dcroxide-dcrec"
description = "Decred signature types mirroring dcrd's dcrec packages: ECDSA-secp256k1 with dcrd's exact acceptance rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The audited libsecp256k1 C library; dcrd's exact parsing/acceptance rules
# are enforced by our own layer in front of it (ADR-0006).
libsecp256k1 = { package = "secp256k1", version = "0.29", features = ["global-context"] }
# Pure-Rust scalar/point arithmetic for EC-Schnorr-DCRv0, which needs raw
# group operations no packaged signing API exposes (ADR-0006).
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "precomputed-tables", "std"] }
# RFC6979 nonce generation (dcrd's exact variant, ported in this crate).
hmac = "0.12"
sha2 = "0.10"
# Ed25519 group/scalar primitives; dcrd's exact (2017-agl) acceptance
# behavior is implemented in our edwards module on top of these.
curve25519-dalek = "4"
# BLAKE-256 for the EC-Schnorr-DCRv0 challenge.
dcroxide-crypto = { path = "../dcroxide-crypto" }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
