[package]
name = "dcroxide-mining"
description = "Block template mining support mirroring dcrd's internal/mining package, starting with the mining view and priority layers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dcroxide-chainhash = { path = "../dcroxide-chainhash" }
dcroxide-stake = { path = "../dcroxide-stake" }
dcroxide-wire = { path = "../dcroxide-wire" }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
