[package]
name = "dcroxide-node"
description = "Daemon assembly mirroring dcrd's package main, starting with the configuration pipeline"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dcroxide"
path = "src/bin/dcroxide.rs"

[dependencies]
ctrlc = { version = "3", features = ["termination"] }
getrandom = "0.3"
dcroxide-addrmgr = { path = "../dcroxide-addrmgr" }
dcroxide-blockchain = { path = "../dcroxide-blockchain" }
dcroxide-database = { path = "../dcroxide-database" }
dcroxide-connmgr = { path = "../dcroxide-connmgr" }
dcroxide-containers = { path = "../dcroxide-containers" }
dcroxide-chaincfg = { path = "../dcroxide-chaincfg" }
dcroxide-chainhash = { path = "../dcroxide-chainhash" }
dcroxide-mempool = { path = "../dcroxide-mempool" }
dcroxide-peer = { path = "../dcroxide-peer" }
dcroxide-rpc = { path = "../dcroxide-rpc" }
dcroxide-txscript = { path = "../dcroxide-txscript" }
dcroxide-wire = { path = "../dcroxide-wire" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
