[package]
name = "dcroxide-node"
description = "Daemon assembly mirroring dcrd's package main, starting with the configuration pipeline"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dcroxide"
path = "src/bin/dcroxide.rs"

[[bin]]
name = "addblock"
path = "src/bin/addblock.rs"

[[bin]]
name = "promptsecret"
path = "src/bin/promptsecret.rs"

[dependencies]
ctrlc = { version = "3", features = ["termination"] }
getrandom = "0.3"
dcroxide-addrmgr = { path = "../dcroxide-addrmgr" }
dcroxide-blockchain = { path = "../dcroxide-blockchain" }
dcroxide-certgen = { path = "../dcroxide-certgen" }
dcroxide-uint256 = { path = "../dcroxide-uint256" }
dcroxide-database = { path = "../dcroxide-database" }
dcroxide-connmgr = { path = "../dcroxide-connmgr" }
dcroxide-containers = { path = "../dcroxide-containers" }
dcroxide-chaincfg = { path = "../dcroxide-chaincfg" }
dcroxide-chainhash = { path = "../dcroxide-chainhash" }
dcroxide-dcrjson = { path = "../dcroxide-dcrjson" }
dcroxide-fees = { path = "../dcroxide-fees" }
dcroxide-indexers = { path = "../dcroxide-indexers" }
dcroxide-mempool = { path = "../dcroxide-mempool" }
dcroxide-mixing = { path = "../dcroxide-mixing" }
dcroxide-mining = { path = "../dcroxide-mining" }
dcroxide-netsync = { path = "../dcroxide-netsync" }
dcroxide-stake = { path = "../dcroxide-stake" }
dcroxide-standalone = { path = "../dcroxide-standalone" }
dcroxide-peer = { path = "../dcroxide-peer" }
dcroxide-rpc = { path = "../dcroxide-rpc" }
dcroxide-txscript = { path = "../dcroxide-txscript" }
dcroxide-wire = { path = "../dcroxide-wire" }
rustls = { version = "0.23", features = ["ring"] }
sha1 = { version = "0.10.6", default-features = false }
rustls-pki-types = "1"
ureq = "3"
socket2 = "0.6.4"

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }
tempfile = "3"

[lints]
workspace = true
