[package]
name = "dcroxide-ratelimit"
description = "Token bucket rate limiter mirroring dcrd's internal/ratelimit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
