[package]
name = "dcroxide-rpc"
description = "RPC server components mirroring dcrd's internal/rpcserver, starting with the help subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dcroxide-chaincfg = { path = "../dcroxide-chaincfg" }
dcroxide-chainhash = { path = "../dcroxide-chainhash" }
dcroxide-dcrec = { path = "../dcroxide-dcrec" }
dcroxide-dcrjson = { path = "../dcroxide-dcrjson" }
dcroxide-rpctypes = { path = "../dcroxide-rpctypes" }
dcroxide-stake = { path = "../dcroxide-stake" }
dcroxide-standalone = { path = "../dcroxide-standalone" }
dcroxide-txscript = { path = "../dcroxide-txscript" }
dcroxide-uint256 = { path = "../dcroxide-uint256" }
dcroxide-wire = { path = "../dcroxide-wire" }
num-bigint = { version = "0.4", default-features = false }

[dev-dependencies]
dcroxide-testutil = { path = "../dcroxide-testutil" }

[lints]
workspace = true
