[package]
name = "dcroxide-testutil"
description = "Internal test utilities: dcrd oracle harness and deterministic PRNG (not for release)"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1"

[lints]
workspace = true
